--- a/_data/authors/diegorosa.yml
+++ b/_data/authors/diegorosa.yml
@@ -2,3 +2,4 @@ diegorosa:
   name: Diego Rosa
   github: diegocamposrosa
   about: Software Developer na CWI Software.
+  gravatar: 4249eeb43b4fbaa309a4eb976a18e013
